Fixed navbar center links on mobile devices, added more interaction no user notes, now the creation date of the notes is sended from client, instead of getted from the server

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -334,3 +334,6 @@ input:focus {
 .custom-shape-divider-top-1640127540 .shape-fill {
   fill: #dedaf2;
 }
+.c-pointer {
+  cursor: pointer;
+}
